data/derived/comb/progs/unify/prog7502.ml.out
Characters 176-215:
  | Average (e1, e2) -> (1.0 *. eval (e1,x,y) +. eval (e2,x,y))/2.0
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
